--- a/codingBlock/codingBlock.csproj
+++ b/codingBlock/codingBlock.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Edit\Block\InputBox.Designer.cs">
       <DependentUpon>InputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit\Collapsible.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Edit\Collapsible.Designer.cs">
+      <DependentUpon>Collapsible.cs</DependentUpon>
+    </Compile>
     <Compile Include="Select\SelectProjectForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Edit\Block\InputBox.resx">
       <DependentUpon>InputBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit\Collapsible.resx">
+      <DependentUpon>Collapsible.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit\EditForm.resx">
       <DependentUpon>EditForm.cs</DependentUpon>
