1.auto size _blockTypePnl 2.read file to create initial blocks(on left side, grab to copy and code)

--- a/codingBlock/codingBlock.csproj
+++ b/codingBlock/codingBlock.csproj
@@ -244,6 +244,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <None Include="Resources\blocks.txt" />
+    <None Include="Resources\1.txt" />
     <None Include="Resources\trashCan.png" />
     <None Include="Resources\Icon.ico" />
   </ItemGroup>
